--- a/templates/area_riservata.html
+++ b/templates/area_riservata.html
@@ -15,6 +15,9 @@
         <a href="{{ url_for('nuova_prenotazione') }}" class="btn btn-success btn-lg fw-bold">
           <i class="bi bi-calendar-plus"></i> Nuova Prenotazione
         </a>
+        <a href="{{ url_for('storico_prenotazioni') }}" class="btn btn-info btn-lg fw-bold text-white">
+          <i class="bi bi-clock-history"></i> Storico Prenotazioni
+        </a>
         <a href="{{ url_for('logout') }}" class="btn btn-outline-secondary">Logout</a>
       </div>
     </div>
