--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Registrati</a></li>
                 {% endif %}
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('offerte') }}">Offerte</a></li>
             </ul>
         </div>
     </div>
