--- a/templates/area_riservata.html
+++ b/templates/area_riservata.html
@@ -18,6 +18,11 @@
         <a href="{{ url_for('storico_prenotazioni') }}" class="btn btn-info btn-lg fw-bold text-white">
           <i class="bi bi-clock-history"></i> Storico Prenotazioni
         </a>
+        {% if user['ruolo'] == 'operatore' %}
+        <a href="{{ url_for('dashboard') }}" class="btn btn-warning btn-lg fw-bold text-dark">
+          <i class="bi bi-bar-chart"></i> Dashboard Operatore
+        </a>
+        {% endif %}
         <a href="{{ url_for('logout') }}" class="btn btn-outline-secondary">Logout</a>
       </div>
     </div>
